--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -28,12 +28,16 @@ builds:
   ignore:
     - goos: darwin
       goarch: '386'
-    - goarch: arm
-      goos: windows
-    - goarch: arm64
-      goos: freebsd
-    - goarch: arm64
-      goos: windows
+    - goos: darwin
+      goarch: 'arm64'
+    - goos: darwin
+      goarch: 'arm'
+    - goos: windows
+      goarch: 'arm'
+    - goos: freebsd
+      goarch: 'arm64'
+    - goos: windows
+      goarch: 'arm64'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
 archives:
 - format: zip
